--- a/.ebextensions/efs-mount.config
+++ b/.ebextensions/efs-mount.config
@@ -28,9 +28,17 @@
 ####    http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/vpc-dns.html
 ###################################################################################################
 
+container_commands:
+  1chmod:
+    command: "chmod 777 /moodledata -R"
+  2chown:
+    command: "chown webapp:webapp /moodledata"
+  3link:
+    command: "sudo -u webapp ln -sf /moodledata /var/app/current/moodledata"
+
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    FILE_SYSTEM_ID: '`{"Ref" : "FileSystem"}`'
+    FILE_SYSTEM_ID: fs-0b235f987e772923f
     MOUNT_DIRECTORY: '/moodledata'
 
 ##############################################
@@ -40,6 +48,8 @@ option_settings:
 packages:
   yum:
     amazon-efs-utils: []
+    php8.2-devel: []
+    php8.2-zip: []
 
 commands:
   01_mount:
