--- a/.ebextensions/efs-mount.config
+++ b/.ebextensions/efs-mount.config
@@ -33,8 +33,10 @@ container_commands:
     command: "chmod 777 /moodledata -R"
   2chown:
     command: "chown webapp:webapp /moodledata"
-  3link:
-    command: "sudo -u webapp ln -sf /moodledata /var/app/current/moodledata"
+  3createfolder:
+    command: "mkdir -p /var/app/data && chown webapp:webapp /var/app/data -R && chmod 777 /var/app/data -R"
+  4link:
+    command: "sudo -u webapp ln -sf /moodledata /var/app/data/moodledata"
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
