--- a/.ebextensions/efs-mount.config
+++ b/.ebextensions/efs-mount.config
@@ -50,7 +50,7 @@ option_settings:
 packages:
   yum:
     amazon-efs-utils: []
-    php8.4-devel: []
+    php-devel: []
     php8.4-zip: []
 
 commands:
