Configuração de ambiente

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   KavaEdu:
-    environment: KavaEdu-lms
+    environment: KavaEdu-env
 global:
   application_name: KavaEdu
   branch: null
