--- a/.ebextensions/php-zip.config
+++ b/.ebextensions/php-zip.config
@@ -11,4 +11,4 @@ commands:
   02_install_stuff:
     command: "dnf -y install libzip libzip-devel"
   03_install_more_stuff:
-    command: "pecl install zip"
+    command: "pecl upgrade zip"
